packages/compiler/tests/fixtures/invalid/unknown-handler.svelte
<script>
  let count = 0;
</script>
<text on:select={nonExistent} focusable>{count}</text>
